--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "i18next": "^19.0.1",
     "materialize-css": "^1.0.0",
     "node-sass": "^4.13.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-i18next": "^11.2.6",
     "react-scripts": "3.3.0",
-    "uuidv4": "^6.0.0",
-    "i18next": "^19.0.1"
+    "uuidv4": "^6.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
