--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-i18next": "^11.2.6",
+    "react-material-ui-carousel": "^1.0.0",
     "react-scripts": "3.3.0",
     "react-select": "^3.0.8",
     "uuidv4": "^6.0.0"
